--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <main class="form-container">
+        <form action="">
+                <div>
+                    <label for="login">Login </label>
+                    <input type="text" id="login">
+                </div>
+                <div>
+                    <label for="password">Senha </label>
+                    <input type="text" id="password">
+                </div>
+                <div>
+                    <label for="conected">Permanecer Conectado</label>
+                    <input type="checkbox" id="conected">
+                </div>
+        </form>
+    </main>
+</body>
+</html>
