--- a/index.html
+++ b/index.html
@@ -4,15 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styleIndex.css">
 </head>
 <body>
     <main class="register-page">
+        <form id="form1">
+            <div class="fields">
+             <label for="nameList">Nome da Lista:</label>
+            <input type="text" id="nameList" name="nameList" required>   
+            <input type="submit" value="Adicionar" id="adicionar">
+            </div>
+        </form>
+        <div class="tabelas">
+            <table id="table1">
+            <tr>
+                <th>ID</th>
+                <th>Nome</th>
+                <th>Criado em</th>
+                <th>Ações</th>
+            </tr>
+            
+        </table>
+        </div>
+        
         <div>
             <button id="exit">
                 Sair
             </button>
         </div>
     </main>
-    <script src="script2.js"></script>
+    <script src="scriptIndex.js"></script>
 </body>
 </html>
