--- a/login.html
+++ b/login.html
@@ -11,21 +11,21 @@
         <form action="">
                 <div>
                     <label for="username">Login </label>
-                    <input type="text" id="username">
+                    <input type="text" id="username" required>
                 </div>
                 <div>
                     <label for="password">Senha </label>
-                    <input type="text" id="password">
+                    <input type="password" id="password" required>
                 </div>
                 <div>
                     <label for="connected">Permanecer Conectado</label>
                     <input type="checkbox" id="connected">
                 </div>
                 <div>
-                    <button id="send">ok</button>
+                    <input type="submit" value="OK" id="send">
                 </div>
         </form>
     </main>
-    <script src="script.js"></script>
+    <script src="scriptLogin.js"></script>
 </body>
 </html>
