feat: add modules user and note

--- a/index.html
+++ b/index.html
@@ -33,6 +33,6 @@
             </button>
         </div>
     </main>
-    <script src="scriptIndex.js"></script>
+    <script type="module" src="scriptIndex.js"></script>
 </body>
 </html>
