--- a/login.html
+++ b/login.html
@@ -26,6 +26,6 @@
                 </div>
         </form>
     </main>
-    <script src="scriptLogin.js"></script>
+    <script type="module" src="scriptLogin.js"></script>
 </body>
 </html>
