--- a/login.html
+++ b/login.html
@@ -9,20 +9,21 @@
 <body>
     <main class="form-container">
         <form action="">
-                <div>
-                    <label for="username">Login </label>
-                    <input type="text" id="username" required>
+                <h2>LOGIN</h2>
+                <div class="field">
+                    <!-- <label for="username">Nome </label> -->
+                    <input type="text" id="username" required placeholder="Nome">
                 </div>
-                <div>
-                    <label for="password">Senha </label>
-                    <input type="password" id="password" required>
+                <div class="field">
+                    <!-- <label for="password">Senha </label> -->
+                    <input type="password" id="password" required placeholder="Senha">
                 </div>
                 <div>
                     <label for="connected">Permanecer Conectado</label>
                     <input type="checkbox" id="connected">
                 </div>
                 <div>
-                    <input type="submit" value="OK" id="send">
+                    <input class="btn-submit" type="submit" value="OK" id="send">
                 </div>
         </form>
     </main>
