refactor: change the look of the list page

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <main>
 
     </main>
-    <script src="scriptIndex.js"></script>
+    <script src="scriptList.js"></script>
 </body>
 
 </html>
