--- a/list.html
+++ b/list.html
@@ -39,14 +39,8 @@
 
             </table>
         </div>
-
-        <div>
-            <button id="exit">
-                Sair
-            </button>
-        </div>
     </main>
-    <script type="module" src="scriptIndex.js"></script>
+    <script type="module" src="scriptList.js"></script>
 </body>
 
 </html>
