feat: sign up users

--- a/signup.html
+++ b/signup.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Sign Up</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="nav_bar.css">
 </head>
@@ -21,7 +21,7 @@
     </header>
     <main class="form-container">
         <form action="">
-            <h2>LOGIN</h2>
+            <h2>SIGN UP</h2>
             <div class="field">
                 <!-- <label for="username">Nome </label> -->
                 <input type="text" id="username" required placeholder="Nome">
@@ -33,13 +33,9 @@
             <div class="btn-submit">
                 <input type="submit" value="OK" id="send">
             </div>
-            <div>
-                <input type="checkbox" id="connected">
-                <label for="connected">Permanecer Conectado</label>
-            </div>
         </form>
     </main>
-    <script type="module" src="scriptLogin.js"></script>
+    <script type="module" src="scriptSignup.js"></script>
 </body>
 
 </html>
