--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
             <a href="index.html">
                 <h1>TDL</h1>
             </a>
-            <a href="">null</a>
-            <a href="">null</a>
-            <a href="">null</a>
+            <a href="signup.html">Sign Up</a>
             <a href="login.html">Login</a>
         </nav>
     </header>
